--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,12 @@
         <h1>Health Tracker</h1>
       </header>
 
+      <div id="main">
+      </div>
+    </div>
+
+    <script type="text/template" id="search-page-template">
+      <a href="#/myfoods">MyFoods</a>
       <div id="formBox">
         <form class="form">
           <input type="text" class="inputForm" placeholder="Type a food name" required autofocus>
@@ -24,7 +30,15 @@
 
       <ul id="resultList" class="List">
       </ul>
-    </div>
+    </script>
+
+
+    <script type="text/template" id="myfoods-template">
+      <h1>MyFoods</h1>
+      <a href="/">Home</a>
+      <ul id="myFoods">
+      </ul>
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
