--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,20 @@
     <link rel="stylesheet" href="css/main.css" media="screen"></link>
   </head>
   <body>
+    <!-- <div class="contain-to-grid sticky">
+      <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
+        <ul class="title-area">
+          <li class="name">
+            <h1><a href="/">Health Tracker</a></h1>
+          </li>
+          <li class="toggle-topbar menu-icon"><a href="#/myfoods"><span>My Foods</span></a></li>
+        </ul>
+      </nav>
+    </div> -->
+
+
     <div class="container">
+
       <header>
         <h1>Health Tracker</h1>
       </header>
@@ -25,8 +38,8 @@
 
     <!-- Search + Search Result template -->
     <script type="text/template" id="search-page-template">
+      <a href="#/myfoods">My Food List</a>
       <h3>Search Food</h3>
-      <a href="#/myfoods">MyFoods</a>
       <!-- Search Form -->
       <div id="formBox" class="formBox">
         <form class="form">
@@ -38,34 +51,27 @@
 
     <!-- My Foods Header Template -->
     <script type="text/template" id="myfoods-header-template">
+      <a href="/">Search a food</a>
       <h3>MyFoods</h3>
-      <a href="/">Home</a>
       <p class="total">
         Total: <span id="totalCalories">0</span> calories
       </p>
     </script>
 
-    <!-- My Foods Template -->
-    <script type="text/template" id="myfoods-template">
-      <h3>MyFoods</h3>
-      <a href="/">Home</a>
 
-      <!-- Display user's food list -->
-      <ul id="myFoods"></ul>
-      <hr>
-      <p class="total">
-        Total: <span id="totalCalories">0</span> calories
-      </p>
-    </script>
 
     <!-- List Item Template -->
     <script type="text/template" id="list-item-template">
-      <li class='listItem'>
-        <p><%= item.get("itemName") %> - <%= item.get("brandName") %><span class='addButtonSpan'><button class='<%= item.get("added") ? "removeButton" : "addButton" %>' data-id="<%= item.get('id') %>"><%= item.get("added") ? "X" : "Add" %></button></span></p>
+      <li class="listItem">
+        <p class="itemName"><%= item.get("itemName") %></p>
+        <p>Brand: <%= item.get("brandName") %></p>
+        <span class='buttonSpan'>
+          <button class='<%= item.get("added") ? "removeButton" : "addButton" %>' data-id="<%= item.get('id') %>"><%= item.get("added") ? "X" : "Add" %></button>
+        </span>
         <hr />
         <p><%= item.get("servingSize") %> <%= item.get("servingUnit") %></p>
-        <p>Calories:<%= item.get("calories") %></p>
-        <p>Total Fat:<%= item.get("totalFat") %></p>
+        <p>Calories: <%= item.get("calories") %></p>
+        <p>Total Fat: <%= item.get("totalFat") %></p>
       </li>
     </script>
 
