--- a/src/index.html
+++ b/src/index.html
@@ -7,62 +7,73 @@
     <meta name="author" content="Yuichi Hagio">
     <meta name="description" content="Health Tracking App">
     <title>Health Tracker</title>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/foundation.min.css" media="screen"> -->
-    <link rel="stylesheet" href="css/main.css" media="screen"></link>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.css" media="screen">
+    <link rel="stylesheet" href="css/main2.css" media="screen"></link>
   </head>
   <body>
-    <!-- <div class="contain-to-grid sticky">
-      <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
-        <ul class="title-area">
-          <li class="name">
-            <h1><a href="/">Health Tracker</a></h1>
-          </li>
-          <li class="toggle-topbar menu-icon"><a href="#/myfoods"><span>My Foods</span></a></li>
-        </ul>
-      </nav>
-    </div> -->
+
+    <div class="ui secondary pointing menu fixed nav-bar">
+      <!-- <ul class="title-area"> -->
+        <!-- <li class="name"> -->
+          <a class="item" href="/"><h3>Health Tracker</h3></a>
+        <!-- </li> -->
+        <!-- <ul class="title-area"> -->
+          <!-- <li> -->
+            <a class="item active" href="/"><span>Search</span></a>
+          <!-- </li> -->
+          <!-- <li> -->
+            <a class="item" href="#/myfoods"><span>My Foods</span></a>
+          <!-- </li> -->
+        <!-- </ul> -->
+    </div>
 
 
     <div class="container">
-
-      <header>
-        <h1>Health Tracker</h1>
-      </header>
 
       <!-- The template will be displayed here -->
       <div id="main"></div>
 
       <!-- Display user's search results here -->
-      <ul id="resultList" class="List"></ul>
+      <!-- <ul id="resultList" class="List row"></ul> -->
+      <div id="resultList" class="ui middle aligned divided list"></div>
     </div>
 
     <!-- Search + Search Result template -->
     <script type="text/template" id="search-page-template">
-      <a href="#/myfoods">My Food List</a>
+      <!-- <a href="#/myfoods">My Food List</a> -->
       <h3>Search Food</h3>
       <!-- Search Form -->
-      <div id="formBox" class="formBox">
+
+      <!-- <div id="formBox" class="formBox">
         <form class="form">
           <input type="text" class="inputForm" placeholder="Type a food name" required autofocus>
           <button type="submit" class="submitButton">Search</button>
         </form>
-      </div>
+      </div> -->
+
+      <form class="ui form">
+        <div class="field">
+          <input type="text" class="inputForm" placeholder="Type a food name" required autofocus>
+        </div>
+        <button class="ui teal inverted button" type="submit">Search</button>
+      </form>
     </script>
 
     <!-- My Foods Header Template -->
     <script type="text/template" id="myfoods-header-template">
-      <a href="/">Search a food</a>
+      <!-- <a href="/">Search a food</a> -->
       <h3>MyFoods</h3>
       <p class="total">
         Total: <span id="totalCalories">0</span> calories
       </p>
+      <hr>
     </script>
 
 
 
     <!-- List Item Template -->
     <script type="text/template" id="list-item-template">
-      <li class="listItem">
+      <!-- <li class="listItem">
         <p class="itemName"><%= item.get("itemName") %></p>
         <p>Brand: <%= item.get("brandName") %></p>
         <span class='buttonSpan'>
@@ -72,7 +83,19 @@
         <p><%= item.get("servingSize") %> <%= item.get("servingUnit") %></p>
         <p>Calories: <%= item.get("calories") %></p>
         <p>Total Fat: <%= item.get("totalFat") %></p>
-      </li>
+      </li> -->
+
+
+      <div class="right floated content">
+        <div class='ui button <%= item.get("added") ? "ui red inverted button removeButton" : "ui green inverted button addButton" %>' data-id="<%= item.get('id') %>"><%= item.get("added") ? "X" : "Add" %></div>
+      </div>
+      <div class="content">
+        <h3 class="itemName"><%= item.get("itemName") %></h3>
+        <p>Brand: <%= item.get("brandName") %></p>
+        <p><%= item.get("servingSize") %> <%= item.get("servingUnit") %></p>
+        <p><span class="caloriesText">Calories : </span> <%= item.get("calories") %> ( <span class="fatText">Total Fat : </span> <%= item.get("totalFat") %> )</p>
+        <!-- <p>Total Fat: <%= item.get("totalFat") %></p> -->
+      </div>
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -80,6 +103,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.2/backbone-min.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/backbonefire/0.5.1/backbonefire.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.js"></script>
+
+
     <script src="js/main.js"></script>
   </body>
 </html>
