fixed href link

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
   <body>
     <!-- Navigation Bar at top -->
     <div class="ui secondary pointing menu fixed nav-bar">
-      <a class="item" href="/"><h3>Health Tracker</h3></a>
-      <a class="item active" href="/"><span>Search</span></a>
+      <a class="item" href="#/"><h3>Health Tracker</h3></a>
+      <a class="item active" href="#/"><span>Search</span></a>
       <a class="item" href="#/myfoods"><span>My Foods</span></a>
     </div>
 
