--- a/src/index.html
+++ b/src/index.html
@@ -88,6 +88,6 @@
     <script src="//cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
     <script src="//cdn.firebase.com/libs/backbonefire/0.5.1/backbonefire.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.3/semantic.min.js"></script>
-    <script src="js/bundle.js"></script>
+    <script src="js/bundle2.js"></script>
   </body>
 </html>
